// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when open with multiple paragraphs 1`] = `
<div
  class="descriptor"
  data-testid="descriptor"
>
  <div
    aria-label="Baz"
    class="title"
    role="button"
    style="border-bottom-left-radius: 0.5rem; border-bottom-right-radius: 0.5rem;"
    tabindex="0"
  >
    Baz
    <svg
      aria-hidden="true"
      class="chevron"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`renders correctly when open with single paragraph 1`] = `
<div
  class="descriptor"
  data-testid="descriptor"
>
  <div
    aria-label="Bar"
    class="title"
    role="button"
    style="border-bottom-left-radius: 0.5rem; border-bottom-right-radius: 0.5rem;"
    tabindex="0"
  >
    Bar
    <svg
      aria-hidden="true"
      class="chevron"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;
